build the results sections

--- a/UI/search.html
+++ b/UI/search.html
@@ -16,7 +16,7 @@
     />
     <link rel="stylesheet" href="../assets/styles/app.css" />
   </head>
-  <body>
+  <body class="searchbg">
     <nav class="sticky-top">
       <div class="row d-flex no-wrap my-left">
           <span><img src="../assets/img/logo.png" />Zattix</span>
@@ -39,24 +39,24 @@
         <span><a href="#"><i class="fa fa-user-circle"></i>User</a></s></span>
       </div>
     </nav>
-    <main>
+    <main >
       <div class="hero">
         <h1>Zattix</h1>
         <p>Buying and Selling couldn't be Simpler than this.</p>
-        <form class="" action="search.html" method="GET">
+        <form class="align-items-stretch" action="search.html" method="GET">
           <select class="ui dropdown">
-            <option value="">All Categories</option>
+            <option value="">Wands</option>
             <option value="2">Stationery</option>
             <option value="1">Wands</option>
             <option value="0">Cauldrons</option>
           </select>
           <input type="text" placeholder="What are you looking for?" />
-          <input type="text" placeholder="Location" />
+          <input type="text" placeholder="Hogsmeade" />
           <input type="submit" value="Search" />
         </form>
       </div>
-      <div class="search">
-        <div class="sc1 container">
+      <div class="search container">
+        <div class="sc1 container ">
           <div class="srch1">
             <span><input type="checkbox" class="m-auto"> New</span>
             <span><input  type="checkbox" class="m-auto"> Second Hand</span>
@@ -107,10 +107,192 @@
             </div>
           </div>
         </div>
-        <div class="sc2"></div>
+        <div class="sc2 container">
+          <p class="title"><strong>67</strong> results for <strong>"Wands"</strong> search at <strong>Hogsmeade</strong></p>
+          <div class="card mb-3 align-items-center">
+            <div class="row no-gutters">
+              <div class="col-md-4">
+                <img
+                  src="https://cdn.shopify.com/s/files/1/2597/5112/products/hpnbwand_1_360x.jpg?v=1575933194"
+                  alt="First slide"
+                />
+              </div>
+              <div class="col-md-8">
+                <div class="card-body">
+                  <div class="cartop">
+                    <h5 class="card-title">
+                      Harry Potter Collectible Wand
+                    </h5>
+                    <i class="fa fa-plus-square"></i>
+                  </div>
+                  <p class="first">New</p>
+                  <p class="card-text">
+                    Half-giant jinxes peg-leg gillywater broken glasses large
+                    black dog Great Hall. Nearly-Headless Nick now string them
+                    together, and answer me this, which creature would you be
+                    unwilling to kiss? Poltergeist
+                  </p>
+                  <p class="card-text">
+                    <small class="text-muted">By John Doe</small>
+                  </p>
+                  <p class="card-text">
+                    <small class="text-muted">Location: Narnia</small>
+                  </p>
+                  <div class="last">
+                    <span>450$</span><button>Purchase Details</button>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="card mb-3 align-items-center">
+            <div class="row no-gutters">
+              <div class="col-md-4">
+                <img
+                  src="https://cdn.shopify.com/s/files/1/2597/5112/products/hpnbwandd_f6fdff10-533c-4341-a579-ddaed391f000_540x.jpg?v=1575933194"
+                  alt="First slide"
+                />
+              </div>
+              <div class="col-md-8">
+                <div class="card-body">
+                  <div class="cartop">
+                    <h5 class="card-title">
+                      Dumbledore's Wand
+                    </h5>
+                    <i class="fa fa-plus-square"></i>
+                  </div>
+                  <p class="first">New</p>
+                  <p class="card-text">
+                    Half-giant jinxes peg-leg gillywater broken glasses large
+                    black dog Great Hall. Nearly-Headless Nick now string them
+                    together, and answer me this, which creature would you be
+                    unwilling to kiss? Poltergeist
+                  </p>
+                  <p class="card-text">
+                    <small class="text-muted">By John Doe</small>
+                  </p>
+                  <p class="card-text">
+                    <small class="text-muted">Location: Narnia</small>
+                  </p>
+                  <div class="last">
+                    <span>450$</span><button>Purchase Details</button>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="card mb-3 align-items-center">
+            <div class="row no-gutters">
+              <div class="col-md-4">
+                <img
+                  src="https://cdn.shopify.com/s/files/1/2597/5112/products/hpnbwandlun_360903f4-7d66-4ec2-ab4d-872a8f0a285e_360x.jpg?v=1575933195"
+                  alt="First slide"
+                />
+              </div>
+              <div class="col-md-8">
+                <div class="card-body">
+                  <div class="cartop">
+                    <h5 class="card-title">
+                      Death Eater Wand (Brown)
+                    </h5>
+                    <i class="fa fa-plus-square"></i>
+                  </div>
+                  <p class="first">New</p>
+                  <p class="card-text">
+                    Half-giant jinxes peg-leg gillywater broken glasses large
+                    black dog Great Hall. Nearly-Headless Nick now string them
+                    together, and answer me this, which creature would you be
+                    unwilling to kiss? Poltergeist
+                  </p>
+                  <p class="card-text">
+                    <small class="text-muted">By John Doe</small>
+                  </p>
+                  <p class="card-text">
+                    <small class="text-muted">Location: Narnia</small>
+                  </p>
+                  <div class="last">
+                    <span>450$</span><button>Purchase Details</button>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="card mb-3 align-items-center">
+            <div class="row no-gutters">
+              <div class="col-md-4">
+                <img
+                  src="https://cdn.shopify.com/s/files/1/2597/5112/products/hpnbwandde2_1024x1024@2x.jpg?v=1575933194"
+                  alt="First slide"
+                />
+              </div>
+              <div class="col-md-8">
+                <div class="card-body">
+                  <div class="cartop">
+                    <h5 class="card-title">
+                      Bellatrix Lestrange's Wand
+                    </h5>
+                    <i class="fa fa-plus-square"></i>
+                  </div>
+                  <p class="first">New</p>
+                  <p class="card-text">
+                    Half-giant jinxes peg-leg gillywater broken glasses large
+                    black dog Great Hall. Nearly-Headless Nick now string them
+                    together, and answer me this, which creature would you be
+                    unwilling to kiss? Poltergeist
+                  </p>
+                  <p class="card-text">
+                    <small class="text-muted">By John Doe</small>
+                  </p>
+                  <p class="card-text">
+                    <small class="text-muted">Location: Narnia</small>
+                  </p>
+                  <div class="last">
+                    <span>450$</span><button>Purchase Details</button>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="card mb-3 align-items-center">
+            <div class="row no-gutters">
+              <div class="col-md-4">
+                <img
+                  src="https://cdn.shopify.com/s/files/1/2597/5112/products/hpnbwandbel2_1024x1024@2x.jpg?v=1575933194"
+                  alt="First slide"
+                />
+              </div>
+              <div class="col-md-8">
+                <div class="card-body">
+                  <div class="cartop">
+                    <h5 class="card-title">
+                      Hermione Granger's Wand
+                    </h5>
+                    <i class="fa fa-plus-square"></i>
+                  </div>
+                  <p class="first">New</p>
+                  <p class="card-text">
+                    Half-giant jinxes peg-leg gillywater broken glasses large
+                    black dog Great Hall. Nearly-Headless Nick now string them
+                    together, and answer me this, which creature would you be
+                    unwilling to kiss? Poltergeist
+                  </p>
+                  <p class="card-text">
+                    <small class="text-muted">By John Doe</small>
+                  </p>
+                  <p class="card-text">
+                    <small class="text-muted">Location: Narnia</small>
+                  </p>
+                  <div class="last">
+                    <span>450$</span><button>Purchase Details</button>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
       </div>
     </main>
-    <footer class="container">
+    <footer>
       <div class="foot-left">
         <div>
           <img src="../assets/img/logolite.png" alt="logo">
