finish desktop results section

--- a/UI/search.html
+++ b/UI/search.html
@@ -139,7 +139,7 @@
                     <small class="text-muted">Location: Narnia</small>
                   </p>
                   <div class="last">
-                    <span>450$</span><button>Purchase Details</button>
+                    <span>450$</span><button class="pd">Purchase Details</button>
                   </div>
                 </div>
               </div>
@@ -211,7 +211,7 @@
                     <small class="text-muted">Location: Narnia</small>
                   </p>
                   <div class="last">
-                    <span>450$</span><button>Purchase Details</button>
+                    <span>450$</span><button class="pd">Purchase Details</button>
                   </div>
                 </div>
               </div>
@@ -247,7 +247,7 @@
                     <small class="text-muted">Location: Narnia</small>
                   </p>
                   <div class="last">
-                    <span>450$</span><button>Purchase Details</button>
+                    <span>450$</span><button class="pd">Purchase Details</button>
                   </div>
                 </div>
               </div>
@@ -283,12 +283,13 @@
                     <small class="text-muted">Location: Narnia</small>
                   </p>
                   <div class="last">
-                    <span>450$</span><button>Purchase Details</button>
+                    <span>450$</span><button class="pd">Purchase Details</button>
                   </div>
                 </div>
               </div>
             </div>
           </div>
+          <div class="bts"><button class="bt1">1</button><button>2</button><button>3</button></div>
         </div>
       </div>
     </main>
