customize the footer

--- a/UI/search.html
+++ b/UI/search.html
@@ -296,19 +296,17 @@
     <footer>
       <div class="foot-left">
         <div>
-          <img src="../assets/img/logolite.png" alt="logo">
+          <img src="../assets/img/logolite.png" alt="logo" />
         </div>
-        <div>
+        <div class="cats">
+          <h2>navigation</h2>
           <ul>
-            <li><a class="link" href="#">FAQs</a></li>
-            <li><a class="link" href="#">Contact Us</a></li>
-          </ul>
-        </div>
-        <div>
-          <ul>
-            <li><a class="link" href="#">Privacy Policy</a></li>
-            <li><a class="link" href="#">&copy; 2020 Zattix</a></li>
-            <li><a class="link" href="#">Terms & Conditions</a></li>
+            <li><a href="#">Home</a></li>
+            <li><a href="#">Sign In</a></li>
+            <li><a href="#">Sign Up</a></li>
+            <li><a href="#">T & C</a></li>
+            <li><a href="#">FAQ</a></li>
+            <li><a href="#">Help</a></li>
           </ul>
         </div>
         <div class="cats">
@@ -324,9 +322,9 @@
         </div>
       </div>
       <div class="foot-right">
-        <img src="../assets/img/icon-facebook.svg" alt="fb">
-        <img src="../assets/img/icon-twitter.svg" alt="twt">
-        <img src="../assets/img/icon-instagram.svg" alt="ig">
+        <img src="../assets/img/icon-facebook.svg" alt="fb" />
+        <img src="../assets/img/icon-twitter.svg" alt="twt" />
+        <img src="../assets/img/icon-instagram.svg" alt="ig" />
       </div>
     </footer>
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
