--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
       <div class="hero">
         <h1>Zattix</h1>
         <p>Buying and Selling couldn't be Simpler than this.</p>
-        <form class="" action="search.html" method="GET">
+        <form class="" action="./UI/search.html" method="GET">
           <select class="ui dropdown">
             <option value="">All Categories</option>
             <option value="2">Stationery</option>
@@ -373,17 +373,15 @@
         <div>
           <img src="./assets/img/logolite.png" alt="logo" />
         </div>
-        <div>
+        <div class="cats">
+          <h2>navigation</h2>
           <ul>
-            <li><a class="link" href="#">FAQs</a></li>
-            <li><a class="link" href="#">Contact Us</a></li>
-          </ul>
-        </div>
-        <div>
-          <ul>
-            <li><a class="link" href="#">Privacy Policy</a></li>
-            <li><a class="link" href="#">&copy; 2020 Zattix</a></li>
-            <li><a class="link" href="#">Terms & Conditions</a></li>
+            <li><a href="#">Home</a></li>
+            <li><a href="#">Sign In</a></li>
+            <li><a href="#">Sign Up</a></li>
+            <li><a href="#">T & C</a></li>
+            <li><a href="#">FAQ</a></li>
+            <li><a href="#">Help</a></li>
           </ul>
         </div>
         <div class="cats">
