--- a/UI/search.html
+++ b/UI/search.html
@@ -175,7 +175,7 @@
                     <small class="text-muted">Location: Narnia</small>
                   </p>
                   <div class="last">
-                    <span>450$</span><button>Purchase Details</button>
+                    <span>450$</span><button class="pd">Purchase Details</button>
                   </div>
                 </div>
               </div>
