--- a/index.html
+++ b/index.html
@@ -129,8 +129,8 @@
           <p><a href="#">View All</a></p>
         </div>
 
-        <div class="card-group container flex-wrap">
-          <div class="card m-3 border-0">
+        <div class="row justify-content-center">
+          <div class="card col-md-2 col-sm-4 col-xs-12 m-2 border-0">
             <img
               class="card-img-top"
               src="https://cdn.shopify.com/s/files/1/2597/5112/products/hpnbwand_1_360x.jpg?v=1575933194"
@@ -148,7 +148,7 @@
               </div>
             </div>
           </div>
-          <div class="card m-3 border-0">
+          <div class="card col-md-2 col-sm-4 col-xs-12 m-2 border-0">
             <img
               class="card-img-top"
               src="https://cdn.shopify.com/s/files/1/2597/5112/products/hpnbwandlun_360903f4-7d66-4ec2-ab4d-872a8f0a285e_360x.jpg?v=1575933195"
@@ -166,7 +166,7 @@
               </div>
             </div>
           </div>
-          <div class="card m-3 border-0">
+          <div class="card col-md-2 col-sm-4 col-xs-12 m-2 border-0">
             <img
               class="card-img-top"
               src="https://cdn.shopify.com/s/files/1/2597/5112/products/hpnbwandhr_d9ad403a-3bdf-45fe-b53e-b35e2cf2661a_1024x1024@2x.jpg?v=1575933195"
@@ -184,7 +184,7 @@
               </div>
             </div>
           </div>
-          <div class="card m-3 border-0">
+          <div class="card col-md-2 col-sm-4 col-xs-12 m-2 border-0">
             <img
               class="card-img-top"
               src="https://cdn.shopify.com/s/files/1/2597/5112/products/hpnbwandd_f6fdff10-533c-4341-a579-ddaed391f000_540x.jpg?v=1575933194"
@@ -210,8 +210,8 @@
           <p><a href="#">View All</a></p>
         </div>
 
-        <div class="card-group container flex-wrap">
-          <div class="card m-3 border-0">
+        <div class="row justify-content-center">
+          <div class="card col-md-2 col-sm-4 col-xs-12 m-2 border-0">
             <img
               class="card-img-top"
               src="https://cdn.shopify.com/s/files/1/2597/5112/products/hpnbtime_ff04566f-9e4f-4bcd-8b8f-5fea032f7e78_360x.jpg?v=1575933193"
@@ -231,7 +231,7 @@
               </div>
             </div>
           </div>
-          <div class="card m-3 border-0">
+          <div class="card col-md-2 col-sm-4 col-xs-12 m-2 border-0">
             <img
               class="card-img-top"
               src="https://cdn.shopify.com/s/files/1/2597/5112/products/hpnb7374_1_1024x1024@2x.jpg?v=1575933188"
@@ -249,7 +249,7 @@
               </div>
             </div>
           </div>
-          <div class="card m-3 border-0">
+          <div class="card col-md-2 col-sm-4 col-xs-12 m-2 border-0">
             <img
               class="card-img-top"
               src="https://cdn.shopify.com/s/files/1/2597/5112/products/hpnbwtch03_1_e893de6c-1b92-415c-af30-5e0d98ac71aa_360x.jpg?v=1575933196"
@@ -267,7 +267,7 @@
               </div>
             </div>
           </div>
-          <div class="card m-3 border-0">
+          <div class="card col-md-2 col-sm-4 col-xs-12 m-2 border-0">
             <img
               class="card-img-top"
               src="https://cdn.shopify.com/s/files/1/2597/5112/products/hpnblunaneck_9ee0dc09-7371-4c79-91bf-4ed6edbcbb9d_1024x1024@2x.jpg?v=1575933191"
@@ -292,8 +292,8 @@
           <h2 class="text-uppercase">home decor</h2>
           <p><a href="#">View All</a></p>
         </div>
-        <div class="card-group container flex-wrap">
-          <div class="card m-3 border-0">
+        <div class="row justify-content-center">
+          <div class="card col-md-2 col-sm-4 col-xs-12 m-2 border-0">
             <img
               class="card-img-top"
               src="https://cdn.shopify.com/s/files/1/2597/5112/products/hpnwgrythr_540x.jpg?v=1575933197"
@@ -311,7 +311,7 @@
               </div>
             </div>
           </div>
-          <div class="card m-3 border-0">
+          <div class="card col-md-2 col-sm-4 col-xs-12 m-2 border-0">
             <img
               class="card-img-top"
               src="https://cdn.shopify.com/s/files/1/2597/5112/products/hpmnmug04_467865d7-9247-4666-b873-259d6234f466_1024x1024@2x.jpg?v=1575933187"
@@ -329,7 +329,7 @@
               </div>
             </div>
           </div>
-          <div class="card m-3 border-0">
+          <div class="card col-md-2 col-sm-4 col-xs-12 m-2 border-0">
             <img
               class="card-img-top"
               src="https://cdn.shopify.com/s/files/1/2597/5112/products/hpmnmug01_1024x1024@2x.jpg?v=1575933187"
@@ -347,7 +347,7 @@
               </div>
             </div>
           </div>
-          <div class="card m-3 border-0">
+          <div class="card col-md-2 col-sm-4 col-xs-12 m-2 border-0">
             <img
               class="card-img-top"
               src="https://cdn.shopify.com/s/files/1/2597/5112/products/hpmnmug03_1024x1024@2x.jpg?v=1575933187"
