fix validations and remove reduntant files

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   <body>
     <nav class="sticky-top">
       <div class="row d-flex no-wrap my-left">
-        <span><img src="./assets/img/logo.png" alt="image" />Zattix</span>
+        <span><img src="./assets/img/logo.png" alt="image" />ZATTIX</span>
         <span>
           <a href="#"><i class="fa fa-home"></i> Home</a>
         </span>
