fix some linter errors

--- a/UI/search.html
+++ b/UI/search.html
@@ -113,7 +113,7 @@
             <strong>67</strong> results for <strong>"Wands"</strong> search at
             <strong>Hogsmeade</strong>
           </p>
-          <div class="card mb-3 align-items-center">
+          <div class="card mb-3 align-items-center result">
             <div class="row no-gutters">
               <div class="col-md-4">
                 <img
@@ -150,7 +150,7 @@
               </div>
             </div>
           </div>
-          <div class="card mb-3 align-items-center">
+          <div class="card mb-3 align-items-center result">
             <div class="row no-gutters">
               <div class="col-md-4">
                 <img
@@ -187,7 +187,7 @@
               </div>
             </div>
           </div>
-          <div class="card mb-3 align-items-center">
+          <div class="card mb-3 align-items-center result">
             <div class="row no-gutters">
               <div class="col-md-4">
                 <img
@@ -224,7 +224,7 @@
               </div>
             </div>
           </div>
-          <div class="card mb-3 align-items-center">
+          <div class="card mb-3 align-items-center result">
             <div class="row no-gutters">
               <div class="col-md-4">
                 <img
@@ -261,7 +261,7 @@
               </div>
             </div>
           </div>
-          <div class="card mb-3 align-items-center">
+          <div class="card mb-3 align-items-center result">
             <div class="row no-gutters">
               <div class="col-md-4">
                 <img
