--- a/index.html
+++ b/index.html
@@ -102,14 +102,16 @@
               alt="Card image cap"
             />
             <div class="card-body">
-              <h5 class="card-title">Luna Lovegood's Collectible Wand</h5>
+              <h5 class="card-title">Lovegood's Wand</h5>
               <p class="card-text new">New</p>
               <p class="card-text">
                 <small class="text-muted">From: U.S</small>
               </p>
               <div class="spans">
-                <span><i class="fa fa-cart-plus"></i></span>
-                <span>200$</span>
+                <span class="float-left"
+                  ><i class="fa fa-plus-square"></i
+                ></span>
+                <span class="float-right">200$</span>
               </div>
             </div>
           </div>
@@ -120,14 +122,16 @@
               alt="Card image cap"
             />
             <div class="card-body">
-              <h5 class="card-title">Harry Potter Collectible Wand</h5>
+              <h5 class="card-title">Harry Potter's Wand</h5>
               <p class="card-text new">New</p>
               <p class="card-text">
                 <small class="text-muted">From: U.S</small>
               </p>
               <div class="spans">
-                <span><i class="fa fa-cart-plus"></i></span>
-                <span>200$</span>
+                <span class="float-left"
+                  ><i class="fa fa-plus-square"></i
+                ></span>
+                <span class="float-right">200$</span>
               </div>
             </div>
           </div>
@@ -144,8 +148,10 @@
                 <small class="text-muted">From: U.S</small>
               </p>
               <div class="spans">
-                <span><i class="fa fa-cart-plus"></i></span>
-                <span>200$</span>
+                <span class="float-left"
+                  ><i class="fa fa-plus-square"></i
+                ></span>
+                <span class="float-right">200$</span>
               </div>
             </div>
           </div>
@@ -162,8 +168,10 @@
                 <small class="text-muted">From: U.S</small>
               </p>
               <div class="spans">
-                <span><i class="fa fa-cart-plus"></i></span>
-                <span>200$</span>
+                <span class="float-left"
+                  ><i class="fa fa-plus-square"></i
+                ></span>
+                <span class="float-right">200$</span>
               </div>
             </div>
           </div>
@@ -191,8 +199,10 @@
                 <small class="text-muted">From: U.S</small>
               </p>
               <div class="spans">
-                <span><i class="fa fa-cart-plus"></i></span>
-                <span>200$</span>
+                <span class="float-left"
+                  ><i class="fa fa-plus-square"></i
+                ></span>
+                <span class="float-right">200$</span>
               </div>
             </div>
           </div>
@@ -203,14 +213,16 @@
               alt="Card image cap"
             />
             <div class="card-body">
-              <h5 class="card-title">Hogwarts Pin Set Harry Potter</h5>
+              <h5 class="card-title">Hogwarts Pin Set Harry Potter GRSH</h5>
               <p class="card-text">New</p>
               <p class="card-text">
                 <small class="text-muted">From: Argentina</small>
               </p>
               <div class="spans">
-                <span><i class="fa fa-cart-plus"></i></span>
-                <span>200$</span>
+                <span class="float-left"
+                  ><i class="fa fa-plus-square"></i
+                ></span>
+                <span class="float-right">200$</span>
               </div>
             </div>
           </div>
@@ -227,8 +239,10 @@
                 <small class="text-muted">From: Japan</small>
               </p>
               <div class="spans">
-                <span><i class="fa fa-cart-plus"></i></span>
-                <span>200$</span>
+                <span class="float-left"
+                  ><i class="fa fa-plus-square"></i
+                ></span>
+                <span class="float-right">200$</span>
               </div>
             </div>
           </div>
@@ -245,8 +259,10 @@
                 <small class="text-muted">From: Swiss</small>
               </p>
               <div class="spans">
-                <span><i class="fa fa-cart-plus"></i></span>
-                <span>200$</span>
+                <span class="float-left"
+                  ><i class="fa fa-plus-square"></i
+                ></span>
+                <span class="float-right">200$</span>
               </div>
             </div>
           </div>
@@ -271,8 +287,10 @@
                 <small class="text-muted">From: U.S</small>
               </p>
               <div class="spans">
-                <span><i class="fa fa-cart-plus"></i></span>
-                <span>200$</span>
+                <span class="float-left"
+                  ><i class="fa fa-plus-square"></i
+                ></span>
+                <span class="float-right">200$</span>
               </div>
             </div>
           </div>
@@ -289,8 +307,10 @@
                 <small class="text-muted">From: Argentina</small>
               </p>
               <div class="spans">
-                <span><i class="fa fa-cart-plus"></i></span>
-                <span>200$</span>
+                <span class="float-left"
+                  ><i class="fa fa-plus-square"></i
+                ></span>
+                <span class="float-right">200$</span>
               </div>
             </div>
           </div>
@@ -301,14 +321,16 @@
               alt="Card image cap"
             />
             <div class="card-body">
-              <h5 class="card-title">Harry Potter Ceramic Hedwig Mug</h5>
+              <h5 class="card-title">Ceramic Hedwig Mug</h5>
               <p class="card-text">New</p>
               <p class="card-text">
                 <small class="text-muted">From: Japan</small>
               </p>
               <div class="spans">
-                <span><i class="fa fa-cart-plus"></i></span>
-                <span>200$</span>
+                <span class="float-left"
+                  ><i class="fa fa-plus-square"></i
+                ></span>
+                <span class="float-right">200$</span>
               </div>
             </div>
           </div>
@@ -325,8 +347,10 @@
                 <small class="text-muted">From: Swiss</small>
               </p>
               <div class="spans">
-                <span><i class="fa fa-cart-plus"></i></span>
-                <span>200$</span>
+                <span class="float-left"
+                  ><i class="fa fa-plus-square"></i
+                ></span>
+                <span class="float-right">200$</span>
               </div>
             </div>
           </div>
