--- a/UI/search.html
+++ b/UI/search.html
@@ -3,12 +3,16 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Zattix</title>
+    <title>Diagon Alley</title>
     <link
       rel="stylesheet"
       href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
       integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh"
       crossorigin="anonymous"
+    />
+    <link
+      href="https://fonts.googleapis.com/icon?family=Material+Icons"
+      rel="stylesheet"
     />
     <link
       rel="stylesheet"
@@ -18,8 +22,12 @@
   </head>
   <body class="searchbg">
     <nav class="sticky-top">
-      <div class="row d-flex no-wrap my-left">
-        <span><img src="../assets/img/logo.png" alt="logo" />ZATTIX</span>
+      <div class="d-flex justify-content-between flex-wrap my-left">
+        <span
+          ><img
+            src="https://vignette.wikia.nocookie.net/harrypotter/images/c/ce/Weasleys_Wizard_Wheezes.png/revision/latest/scale-to-width-down/350?cb=20161124001602"
+            alt="logo"
+        /></span>
         <span>
           <a href="#"><i class="fa fa-home"></i> Home</a>
         </span>
@@ -30,6 +38,9 @@
           <a href="#"><i class="fa fa-shopping-cart"></i> Purchase list</a>
         </span>
         <span><button>post an ad</button></span>
+        <div class="burger" id="burger">
+          <i class="material-icons menu menu-toggle">menu</i>
+        </div>
       </div>
       <div class="right font-weight-bold">
         <a href="#"><i class="fa fa-envelope-square"></i></a>
@@ -40,17 +51,17 @@
     </nav>
     <main>
       <div class="hero">
-        <h1>Zattix</h1>
-        <p>Buying and Selling couldn't be Simpler than this.</p>
-        <form class="align-items-stretch" action="search.html" method="GET">
+        <h1>Diagon Alley</h1>
+        <p>One stop online shop for Magical People</p>
+        <form class="" action="./UI/search.html" method="GET">
           <select class="ui dropdown">
-            <option value="">Wands</option>
+            <option value="">All Categories</option>
             <option value="2">Stationery</option>
             <option value="1">Wands</option>
             <option value="0">Cauldrons</option>
           </select>
           <input type="text" placeholder="What are you looking for?" />
-          <input type="text" placeholder="Hogsmeade" />
+          <input type="text" placeholder="Location" />
           <input type="submit" value="Search" />
         </form>
       </div>
@@ -307,7 +318,10 @@
     <footer>
       <div class="foot-left">
         <div>
-          <img src="../assets/img/logolite.png" alt="logo" />
+          <img
+            src="https://vignette.wikia.nocookie.net/harrypotter/images/c/ce/Weasleys_Wizard_Wheezes.png/revision/latest/scale-to-width-down/350?cb=20161124001602"
+            alt="logo"
+          />
         </div>
         <div class="cats">
           <h2>navigation</h2>
