fix linter issues

--- a/UI/search.html
+++ b/UI/search.html
@@ -25,6 +25,7 @@
       <div class="d-flex justify-content-between flex-wrap my-left">
         <span
           ><img
+            class="toplogo"
             src="https://vignette.wikia.nocookie.net/harrypotter/images/c/ce/Weasleys_Wizard_Wheezes.png/revision/latest/scale-to-width-down/350?cb=20161124001602"
             alt="logo"
         /></span>
@@ -154,7 +155,7 @@
                     <small class="text-muted">Location: Narnia</small>
                   </p>
                   <div class="last">
-                    <span>450$</span
+                    <span class="la">450$</span
                     ><button class="pd">Purchase Details</button>
                   </div>
                 </div>
@@ -191,7 +192,7 @@
                     <small class="text-muted">Location: Narnia</small>
                   </p>
                   <div class="last">
-                    <span>450$</span
+                    <span class="la">450$</span
                     ><button class="pd">Purchase Details</button>
                   </div>
                 </div>
@@ -228,7 +229,7 @@
                     <small class="text-muted">Location: Narnia</small>
                   </p>
                   <div class="last">
-                    <span>450$</span
+                    <span class="la">450$</span
                     ><button class="pd">Purchase Details</button>
                   </div>
                 </div>
@@ -265,7 +266,7 @@
                     <small class="text-muted">Location: Narnia</small>
                   </p>
                   <div class="last">
-                    <span>450$</span
+                    <span class="la">450$</span
                     ><button class="pd">Purchase Details</button>
                   </div>
                 </div>
@@ -302,7 +303,7 @@
                     <small class="text-muted">Location: Narnia</small>
                   </p>
                   <div class="last">
-                    <span>450$</span
+                    <span class="la">450$</span
                     ><button class="pd">Purchase Details</button>
                   </div>
                 </div>
