--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
       <div class="d-flex justify-content-between flex-wrap my-left">
         <span
           ><img
+            class="toplogo"
             src="https://vignette.wikia.nocookie.net/harrypotter/images/c/ce/Weasleys_Wizard_Wheezes.png/revision/latest/scale-to-width-down/350?cb=20161124001602"
             alt="image"
         /></span>
@@ -93,7 +94,8 @@
                 <p class="card-text">
                   <small class="text-muted">Location: Narnia</small>
                 </p>
-                <span>450$</span><span>Purchase DEtails</span>
+                <span class="spa">450$</span
+                ><span class="spa">Purchase DEtails</span>
               </div>
             </div>
           </div>
