make the carousel for hot ads

--- a/index.html
+++ b/index.html
@@ -66,40 +66,147 @@
           <input type="submit" value="Search" />
         </form>
       </div>
-
-      <div class="ads container">
-        <h2>Hot Ads</h2>
-        <div class="card mb-3 align-items-center border-0">
-          <div class="row no-gutters">
-            <div class="col-md-4">
-              <img
-                src="https://cdn.shopify.com/s/files/1/2597/5112/products/hpbdbp11_1024x1024@2x.jpg?v=1575933160"
-                alt="First slide"
-              />
+      <div
+        id="carouselExampleControls"
+        class="carousel slide container"
+        data-ride="carousel"
+      >
+        <div class="carousel-inner">
+          <div class="carousel-item active">
+            <div class="ads">
+              <h2>Hot Ads</h2>
+              <div class="card mb-3 align-items-center border-0">
+                <div class="row no-gutters">
+                  <div class="col-md-4">
+                    <img
+                      src="https://cdn.shopify.com/s/files/1/2597/5112/products/hpnwgrythr_540x.jpg?v=1575933197"
+                      alt="First slide"
+                    />
+                  </div>
+                  <div class="col-md-8">
+                    <div class="card-body">
+                      <h5 class="card-title">
+                        Harry Potter Hogwarts Crest Allover Print Backpack
+                      </h5>
+                      <p class="card-text">
+                        Half-giant jinxes peg-leg gillywater broken glasses
+                        large black dog Great Hall. Nearly-Headless Nick now
+                        string them together, and answer me this, which creature
+                        would you be unwilling to kiss? Poltergeist
+                      </p>
+                      <p class="card-text">
+                        <small class="text-muted">By John Doe</small>
+                      </p>
+                      <p class="card-text">
+                        <small class="text-muted">Location: Narnia</small>
+                      </p>
+                      <span class="spa">450$</span
+                      ><span class="spa">Purchase DEtails</span>
+                    </div>
+                  </div>
+                </div>
+              </div>
             </div>
-            <div class="col-md-8">
-              <div class="card-body">
-                <h5 class="card-title">
-                  Harry Potter Hogwarts Crest Allover Print Backpack
-                </h5>
-                <p class="card-text">
-                  Half-giant jinxes peg-leg gillywater broken glasses large
-                  black dog Great Hall. Nearly-Headless Nick now string them
-                  together, and answer me this, which creature would you be
-                  unwilling to kiss? Poltergeist
-                </p>
-                <p class="card-text">
-                  <small class="text-muted">By John Doe</small>
-                </p>
-                <p class="card-text">
-                  <small class="text-muted">Location: Narnia</small>
-                </p>
-                <span class="spa">450$</span
-                ><span class="spa">Purchase DEtails</span>
+          </div>
+          <div class="carousel-item">
+            <div class="ads">
+              <h2>Hot Ads</h2>
+              <div class="card mb-3 align-items-center border-0">
+                <div class="row no-gutters">
+                  <div class="col-md-4">
+                    <img
+                      src="https://cdn.shopify.com/s/files/1/2597/5112/products/hpbdbp11_1024x1024@2x.jpg?v=1575933160"
+                      alt="First slide"
+                    />
+                  </div>
+                  <div class="col-md-8">
+                    <div class="card-body">
+                      <h5 class="card-title">
+                        Harry Potter Hogwarts Crest Allover Print Backpack
+                      </h5>
+                      <p class="card-text">
+                        Half-giant jinxes peg-leg gillywater broken glasses
+                        large black dog Great Hall. Nearly-Headless Nick now
+                        string them together, and answer me this, which creature
+                        would you be unwilling to kiss? Poltergeist
+                      </p>
+                      <p class="card-text">
+                        <small class="text-muted">By John Doe</small>
+                      </p>
+                      <p class="card-text">
+                        <small class="text-muted">Location: Narnia</small>
+                      </p>
+                      <span class="spa">450$</span
+                      ><span class="spa">Purchase DEtails</span>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="carousel-item">
+            <div class="ads">
+              <h2>Hot Ads</h2>
+              <div class="card mb-3 align-items-center border-0">
+                <div class="row no-gutters">
+                  <div class="col-md-4">
+                    <img
+                      src="https://cdn.shopify.com/s/files/1/2597/5112/products/hpnbwtch03_1_e893de6c-1b92-415c-af30-5e0d98ac71aa_360x.jpg?v=1575933196"
+                      alt="First slide"
+                    />
+                  </div>
+                  <div class="col-md-8">
+                    <div class="card-body">
+                      <h5 class="card-title">
+                        Harry Potter Hogwarts Crest Allover Print Backpack
+                      </h5>
+                      <p class="card-text">
+                        Half-giant jinxes peg-leg gillywater broken glasses
+                        large black dog Great Hall. Nearly-Headless Nick now
+                        string them together, and answer me this, which creature
+                        would you be unwilling to kiss? Poltergeist
+                      </p>
+                      <p class="card-text">
+                        <small class="text-muted">By John Doe</small>
+                      </p>
+                      <p class="card-text">
+                        <small class="text-muted">Location: Narnia</small>
+                      </p>
+                      <span class="spa">450$</span
+                      ><span class="spa">Purchase DEtails</span>
+                    </div>
+                  </div>
+                </div>
               </div>
             </div>
           </div>
         </div>
+        <a
+          class="carousel-control-prev"
+          href="#carouselExampleControls"
+          role="button"
+          data-slide="prev"
+        >
+          <span class="arrow lefts">
+            <i class="material-icons">
+              keyboard_arrow_left
+            </i>
+          </span>
+          <span class="sr-only">Previous</span>
+        </a>
+        <a
+          class="carousel-control-next"
+          href="#carouselExampleControls"
+          role="button"
+          data-slide="next"
+        >
+          <span class="arrow rights" aria-hidden="true">
+            <i class="material-icons">
+              keyboard_arrow_right
+            </i>
+          </span>
+          <span class="sr-only">Next</span>
+        </a>
       </div>
       <div class="electronics">
         <div class="title container">
@@ -407,13 +514,8 @@
         <img src="./assets/img/icon-instagram.svg" alt="ig" />
       </div>
     </footer>
-    <script>
-      const hum = document.getElementsById("burger");
-      hum.addEventListener("click", function (e) {
-        const xmMenu = document.getElementById("xmMenu");
-        xmMenu.classList.toggle("hide");
-      });
-    </script>
+
+    <script src="./assets/app.js"></script>
     <script
       src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
       integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
